--- a/style/style.css
+++ b/style/style.css
@@ -387,6 +387,92 @@
 
 /* ABOUT US PAGE END */
 
+/* SERVICES */
+
+.card-img-top {
+    height: 60%;
+    object-fit: cover;
+}
+.card-div {
+    border-radius: 8.65px 71.1px 8.65px 8.65px;
+    overflow: hidden;
+}
+
+.card {
+    height: 80%;
+    border: 0;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.carousel_section {
+    padding: 2vh 6vw;
+    height: fit-content;
+}
+
+.carousel-title {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.carousel-title span {
+    font-size: 60px;
+    font-family: "Source Serif 4", serif;
+    font-weight: 600;
+}
+
+.carousel-button {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.carousel-button button {
+    background-color: #fff;
+    border-radius: 50px;
+    padding: 18px 28px;
+    font-weight: 600;
+}
+
+.carousel-desc span {
+    font-size: 20px;
+    font-family: "Open Sans", sans-serif;
+}
+
+.gradientback{
+
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    width:100%;
+    height:50px;
+    background: -moz-linear-gradient(top,  rgba(137,255,241,0) 0%, rgb(255, 255, 255) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(137,255,241,0)), color-stop(100%,rgba(255, 255, 255))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(137,255,241,0) 0%,rgba(255, 255, 255) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(137,255,241,0) 0%,rgba(255, 255, 255) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(137,255,241,0) 0%,rgba(255, 255, 255) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(137,255,241,0) 0%,rgb(255, 255, 255) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0089fff1', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+}
+
+.card-button {
+    z-index: 999;
+}
+
+.card-button {
+    background-color: #ffffff00;
+    border: 0;
+    color: var(--color-red);
+}
+
+/* SERVICES END */
+
 /* reso breakpoints */
 
 /* Small devices (landscape phones, 576px and up) */
