--- a/style/style.css
+++ b/style/style.css
@@ -349,6 +349,10 @@
 .job-sub {
     font-family: "Lato", sans-serif;
     font-size: 20px;
+    border: 0;
+    background: #fff;
+    text-decoration: none;
+    text-align: left;
 }
 
 /* join end */
@@ -471,7 +475,135 @@
     color: var(--color-red);
 }
 
+.full-page-modal .modal-dialog {
+    max-width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .full-page-modal .modal-content,
+  .full-page-modal .modal-join-content {
+    border-radius: 0;
+    border-bottom-left-radius: 100px;
+    transition: transform 0.3s ease-out;
+    background-color: var(--color-dark-gray);
+    color: var(--font-gold);
+  }
+
+  .full-page-modal .modal-join-content {
+    height: 68%;    
+  }
+
+  .full-page-modal .modal-content {
+    height: 80%;    
+  }
+
+  .close {
+    color: #ffffff !important;
+    font-size: 50px;
+  }
+
+  .service-modal-row {
+    padding: 5vh 6vw;
+  }
+
+  .modal-image {
+    width: 25vmin;
+  }
+
+  .service-desktop-title span {
+    font-size: 5vmin;
+    font-family: "Source Serif 4", serif;
+  }
+
+  .service-desktop-item {
+    border: 1px solid var(--font-gold);
+    margin: 8px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    padding: 30px 18px;
+    max-width: 33.3333%;
+    min-height: 100%;
+    border-radius: 20px;
+  }
+
+  .service-desktop-item_title {
+    font-size: 2.85vmin;
+    line-height: 35px;
+    margin-bottom: 12px;
+    font-weight: 600;
+  }
+
+  .service-desktop-item_desc {
+    font-size: 2vmin;
+    font-weight: 300;
+  }
+
+  .service-desktop-item:hover {
+    background-color: var(--font-gold);
+    color: var(--color-dark-gray);
+  }
+
+  .service-modal-button button {
+    margin-top: 8vh;
+    background-color: var(--font-gold);
+    color: var(--color-dark-gray);
+    border-radius: 50px;
+    padding: 18px 10vh;
+    font-size: 2vmin;
+    font-weight: 600;
+    border: 0;
+  }
+
 /* SERVICES END */
+
+/* Join modal */
+
+    .join-field,
+    .join-send {
+        padding: 1.5vh 20vw;
+    }
+
+    .join-field_title {
+        font-weight: 200;
+        font-size: 15px;
+        margin-bottom: 8px;
+    }
+
+    .join-field input {
+        width: 100%;
+        height: 46px;
+        border-radius: 10px;
+    }
+
+    .join-field button {
+        border: 0;
+        border-radius: 16px;
+        padding: 0.35vh 1.5vw;
+    }
+
+    .join-field button i {
+        margin-left: 10px;
+    }
+
+    .join-send button {
+        border: 0;
+        background-color: var(--color-dark-gray);
+        color: var(--font-gold);
+        font-size: 22px;
+    }
+
+    .join-send button i {
+        margin-right: 14px;
+    }
+
+/* join modal end */
 
 /* reso breakpoints */
 
@@ -772,6 +904,7 @@
         border-radius: 30px;
         margin: 8px 0;
         font-size: 15px;
+        text-align: center;
     }
 
     .job-title {
@@ -838,6 +971,89 @@
         font-size: 13px;
         margin-bottom: 3px;
     }
+
+    /* services modal mobile */
+
+    .service-desktop-items {
+        display: none !important;
+    }
+
+    .service-mobile-item {
+        display: flex !important;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 2vh 13vw;
+    }
+
+    .service-modal-button {
+        padding: 0;
+    }
+
+    .service-modal-button button {
+        font-size: 3vmin;
+    }
+
+    .full-page-modal .modal-content {
+        height: 95%;
+    }
+
+    .service-mobile-item_title {
+        font-size: 3.55vmin;
+        font-weight: 600;
+    }
+    
+    .service-mobile-item_desc {
+        font-size: 3.2vmin;
+        font-weight: 300;
+    }
+
+    .bordered {
+        border-top: 1px solid #ffffff7c;
+        border-bottom: 1px solid #ffffff7c;
+    }
+
+    .service-desktop-title {
+        margin-bottom: 3vh;
+    }
+
+    .mobile-card {
+        display: inline-block !important;
+    }
+
+    .modal-join-content {
+        height: 90% !important;
+    }
+
+    .join-field input {
+        height: 40px;
+    }
+
+    .join-field {
+        padding: 1.5vh 5vw 0.5vh 5vw;
+    }
+
+    .join-field button {
+        padding: 0.3vh 2.5vw;
+    }
+
+    .join-send button {
+        border-radius: 50px;
+        background-color: var(--font-gold);
+        color: var(--color-dark-gray);
+        font-size: 15px;
+        font-weight: 600;
+        padding: 10px 0;
+        width: 100%;
+    }
+
+    .join-send button i {
+        display: none;
+    }
+
+    .join-send {
+        padding: 8vh 7vw 1.5vh 7vw;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -881,4 +1097,8 @@ body {
     min-width: 100vw;
     overflow-y: scroll;
     scroll-behavior: smooth;
+}
+
+button:focus {
+    outline: none;
 }
