--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,7 @@
     line-height: 100px;
     color: var(--color-dark-gray);
 }
+
 /* intro end */
 
 /* welcome */
@@ -122,8 +123,8 @@
 /* service */
 
 .service-row {
-    background: rgb(225,225,225);
-    background: linear-gradient(180deg, rgba(225,225,225,1) 0%, rgba(130,27,28,1) 100%);
+    background: rgb(225, 225, 225);
+    background: linear-gradient(180deg, rgba(225, 225, 225, 1) 0%, rgba(130, 27, 28, 1) 100%);
     padding: 30px 40px;
     min-height: 100vh;
 }
@@ -201,7 +202,7 @@
 }
 
 .footer-center,
-.footer-right_item  {
+.footer-right_item {
     color: var(--font-gold);
 }
 
@@ -397,6 +398,7 @@
     height: 60%;
     object-fit: cover;
 }
+
 .card-div {
     border-radius: 8.65px 71.1px 8.65px 8.65px;
     overflow: hidden;
@@ -449,20 +451,27 @@
     font-family: "Open Sans", sans-serif;
 }
 
-.gradientback{
+.gradientback {
 
-    position:absolute;
-    bottom:0px;
-    left:0px;
-    width:100%;
-    height:50px;
-    background: -moz-linear-gradient(top,  rgba(137,255,241,0) 0%, rgb(255, 255, 255) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(137,255,241,0)), color-stop(100%,rgba(255, 255, 255))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(137,255,241,0) 0%,rgba(255, 255, 255) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(137,255,241,0) 0%,rgba(255, 255, 255) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(137,255,241,0) 0%,rgba(255, 255, 255) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(137,255,241,0) 0%,rgb(255, 255, 255) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0089fff1', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 50px;
+    background: -moz-linear-gradient(top, rgba(137, 255, 241, 0) 0%, rgb(255, 255, 255) 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(137, 255, 241, 0)), color-stop(100%, rgba(255, 255, 255)));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(137, 255, 241, 0) 0%, rgba(255, 255, 255) 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(137, 255, 241, 0) 0%, rgba(255, 255, 255) 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(137, 255, 241, 0) 0%, rgba(255, 255, 255) 100%);
+    /* IE10+ */
+    background: linear-gradient(to bottom, rgba(137, 255, 241, 0) 0%, rgb(255, 255, 255) 100%);
+    /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0089fff1', endColorstr='#000000', GradientType=0);
+    /* IE6-9 */
 }
 
 .card-button {
@@ -480,44 +489,44 @@
     height: 100%;
     margin: 0;
     padding: 0;
-  }
+}
 
-  .full-page-modal .modal-content,
-  .full-page-modal .modal-join-content {
+.full-page-modal .modal-content,
+.full-page-modal .modal-join-content {
     border-radius: 0;
     border-bottom-left-radius: 100px;
     transition: transform 0.3s ease-out;
     background-color: var(--color-dark-gray);
     color: var(--font-gold);
-  }
+}
 
-  .full-page-modal .modal-join-content {
-    height: 68%;    
-  }
+.full-page-modal .modal-join-content {
+    height: 68%;
+}
 
-  .full-page-modal .modal-content {
-    height: 80%;    
-  }
+.full-page-modal .modal-content {
+    height: 80%;
+}
 
-  .close {
+.close {
     color: #ffffff !important;
     font-size: 50px;
-  }
+}
 
-  .service-modal-row {
+.service-modal-row {
     padding: 5vh 6vw;
-  }
+}
 
-  .modal-image {
+.modal-image {
     width: 25vmin;
-  }
+}
 
-  .service-desktop-title span {
+.service-desktop-title span {
     font-size: 5vmin;
     font-family: "Source Serif 4", serif;
-  }
+}
 
-  .service-desktop-item {
+.service-desktop-item {
     border: 1px solid var(--font-gold);
     margin: 8px;
 
@@ -531,26 +540,26 @@
     max-width: 33.3333%;
     min-height: 100%;
     border-radius: 20px;
-  }
+}
 
-  .service-desktop-item_title {
+.service-desktop-item_title {
     font-size: 2.85vmin;
     line-height: 35px;
     margin-bottom: 12px;
     font-weight: 600;
-  }
+}
 
-  .service-desktop-item_desc {
+.service-desktop-item_desc {
     font-size: 2vmin;
     font-weight: 300;
-  }
+}
 
-  .service-desktop-item:hover {
+.service-desktop-item:hover {
     background-color: var(--font-gold);
     color: var(--color-dark-gray);
-  }
+}
 
-  .service-modal-button button {
+.service-modal-button button {
     margin-top: 8vh;
     background-color: var(--font-gold);
     color: var(--color-dark-gray);
@@ -559,49 +568,49 @@
     font-size: 2vmin;
     font-weight: 600;
     border: 0;
-  }
+}
 
 /* SERVICES END */
 
 /* Join modal */
 
-    .join-field,
-    .join-send {
-        padding: 1.5vh 20vw;
-    }
+.join-field,
+.join-send {
+    padding: 1.5vh 20vw;
+}
 
-    .join-field_title {
-        font-weight: 200;
-        font-size: 15px;
-        margin-bottom: 8px;
-    }
+.join-field_title {
+    font-weight: 200;
+    font-size: 15px;
+    margin-bottom: 8px;
+}
 
-    .join-field input {
-        width: 100%;
-        height: 46px;
-        border-radius: 10px;
-    }
+.join-field input {
+    width: 100%;
+    height: 46px;
+    border-radius: 10px;
+}
 
-    .join-field button {
-        border: 0;
-        border-radius: 16px;
-        padding: 0.35vh 1.5vw;
-    }
+.join-field button {
+    border: 0;
+    border-radius: 16px;
+    padding: 0.35vh 1.5vw;
+}
 
-    .join-field button i {
-        margin-left: 10px;
-    }
+.join-field button i {
+    margin-left: 10px;
+}
 
-    .join-send button {
-        border: 0;
-        background-color: var(--color-dark-gray);
-        color: var(--font-gold);
-        font-size: 22px;
-    }
+.join-send button {
+    border: 0;
+    background-color: var(--color-dark-gray);
+    color: var(--font-gold);
+    font-size: 22px;
+}
 
-    .join-send button i {
-        margin-right: 14px;
-    }
+.join-send button i {
+    margin-right: 14px;
+}
 
 /* join modal end */
 
@@ -611,7 +620,7 @@
 @media (max-width: 576px) {
 
     /* Make header sticky and same with mayes */
-    
+
     .intro {
         min-height: 67vh;
     }
@@ -636,7 +645,7 @@
         text-align: left !important;
         margin-top: 30px;
     }
-    
+
     .welcome-row {
         padding: 2vh 8%;
     }
@@ -664,7 +673,7 @@
     }
 
     .why-right div img {
-        display: none;  
+        display: none;
     }
 
     .why-left {
@@ -745,22 +754,22 @@
         flex-direction: column;
     }
 
-    .about-us_row > :nth-child(2) {
+    .about-us_row> :nth-child(2) {
         order: 3;
     }
-    
-    .about-us_row > :nth-child(3) {
+
+    .about-us_row> :nth-child(3) {
         order: 2;
     }
 
-    .about-us_row > :nth-child(4) {
+    .about-us_row> :nth-child(4) {
         order: 5;
     }
 
-    .about-us_row > :nth-child(5) {
+    .about-us_row> :nth-child(5) {
         order: 4;
     }
-    
+
     .about-title_mobile {
         display: contents !important;
         font-family: "Source Serif 4", serif;
@@ -811,7 +820,7 @@
         order: 2
     }
 
-    .footer2{
+    .footer2 {
         order: 1;
         align-items: center;
     }
@@ -952,9 +961,9 @@
         padding: 20px 30px;
         height: fit-content;
     }
-    
+
     .card-img-top {
-       height: 190px;
+        height: 190px;
         border-radius: 8.65px 71.1px 8.65px 8.65px;
     }
 
@@ -1002,7 +1011,7 @@
         font-size: 3.55vmin;
         font-weight: 600;
     }
-    
+
     .service-mobile-item_desc {
         font-size: 3.2vmin;
         font-weight: 300;
@@ -1057,20 +1066,52 @@
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
-}
+@media (max-width: 768px) {}
 
 /* Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {
+/* Media query to target mobile devices */
+@media (max-width: 991.98px) {
+
+    /* Corresponds to Bootstrap lg breakpoint */
+    .navbar-nav {
+        font-size: 20px;
+        font-weight: 200;
+        padding: 0 53px 0 32px;
+        width: 100%;
+    }
+
+    .navbar-nav .nav-item {
+        border-bottom: 1px solid var(--color-lightest-gray);
+        padding: 17px 0 28px 0;
+        /* Add some spacing between nav items */
+    }
+
+    .navbar {
+        display: block !important;
+        padding: 0;
+    }
+
+    .homenav {
+        display: none !important;
+    }
 }
+
+/* Additional custom styles */
+.navbar-nav .nav-link {
+    font-size: 1.2rem;
+}
+
+.navbar-brand {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) {
-}
+@media (max-width: 1200px) {}
 
 /* Extra extra large devices (larger desktops, 1400px and up) */
-@media (max-width: 1400px) {
-}
+@media (max-width: 1400px) {}
 
 /* breakpoints end */
 
@@ -1101,4 +1142,84 @@ body {
 
 button:focus {
     outline: none;
+}
+
+/* Mobile nav sccs
+
+/* Make the collapse take up 100% of the screen */
+.navbar-collapse {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 97vh;
+    background-color: #821b1dfc; /* Red background */
+    color: var(--color-lightest-gray) !important;
+    transform: translateX(100%);
+    transition: transform 0.4s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-bottom-left-radius: 100px; /* No corner rounding since it's full screen */
+}
+
+.top-collapse {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 5vh 8vw;
+}
+
+.top-collapse img {
+    width: 50%;
+}
+
+/* Show the collapse when toggled */
+.navbar-collapse.show {
+    transform: translateX(0);
+}
+
+/* Navbar links styling */
+.navbar-nav .nav-link {
+    font-size: 17px;
+    color: var(--color-lightest-gray) !important;
+}
+
+/* Close button styling */
+.close-btn {
+    /* position: absolute;
+    top: 5vh;
+    right: 8vw; */
+    font-size: 3rem;
+    background: none;
+    border: none;
+    color: var(--color-lightest-gray) !important; /* Gold "X" button */
+    cursor: pointer;
+}
+
+/* Style the navbar toggler to match your design */
+.navbar-toggler {
+    position: absolute;
+    right: 8vw;
+    top: 5vh;
+    color: var(--color-red);
+    z-index: 1051; /* Above the collapsible menu */
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='%23821B1C' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+    border: none;
+}
+
+.info-collapse {
+    padding: 0 53px 0 32px;
+    font-weight: 200;
+    margin-top: 8vh;
+}
+
+.info-collapse div span {
+    color: #EAEAEA !important;
+    font-size: 13px !important;
 }
