--- a/style/style.css
+++ b/style/style.css
@@ -126,10 +126,10 @@
     background: rgb(225, 225, 225);
     background: linear-gradient(180deg, rgba(225, 225, 225, 1) 0%, rgba(130, 27, 28, 1) 100%);
     padding: 30px 40px;
-    min-height: 100vh;
 }
 
 .service-col {
+    max-height: fit-content;
     border-bottom-left-radius: 140px;
     border-top-right-radius: 140px;
     padding: 7.5% 12%;
@@ -156,6 +156,28 @@
 
 .service-cont {
     margin-bottom: 46px;
+}
+
+.service-item-cont {
+    max-width: 20vmax;
+    border-radius: 50%;
+    overflow: hidden;
+    max-height: 20vmax;
+}
+
+.service-item-cont img {
+    width: 20vmax;
+    height: 20vmax;
+    object-fit: cover;
+    object-position: 20% 50%;
+}
+
+.mobile-item,
+.mobile-item-img,
+.mobile-item-img img,
+.mobile-service button,
+.expander-button {
+    display: none;
 }
 
 .service-col button {
@@ -448,6 +470,7 @@
 
 .carousel-desc span {
     font-size: 20px;
+    font-weight: 200;
     font-family: "Open Sans", sans-serif;
 }
 
@@ -740,6 +763,14 @@
         transition: opacity 0.5s ease-in-out;
     }
 
+    .mobile-item,
+    .mobile-item-img,
+    .mobile-item-img img,
+    .mobile-service button,
+    .expander-button {
+        display: block;
+    }
+
     .service-row button {
         display: none;
     }
@@ -750,17 +781,32 @@
 
     .service-col {
         position: relative;
-        padding: 12% 13%;
+        padding: 12% 9%;
         border-bottom-left-radius: 0;
         /* max-height: 85vh; */
         justify-content: flex-start !important;
         overflow: hidden; 
-        transition: max-height 1s ease-in-out;
+        transition: max-height 0.5s ease-in-out;
     }
 
     .service-col.expanded {
         /* max-height: 120vh; */
-        transition: max-height 1s ease-in-out;
+        transition: max-height 0.5s ease-in-out;
+    }
+
+    .mobile-item-img {
+        min-width: 16vmax;
+        min-height: 17vmax;
+        border-radius: 24px;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+
+    .mobile-item-img img {
+        width: 100%;
+        height: 110%;
+        object-fit: cover;
+        vertical-align:top;
     }
 
     .expander-button {
@@ -779,10 +825,6 @@
         flex-direction: column;
         align-items: center;
         margin: 1.5vh 0;
-    }
-
-    .mobile-item img {
-        margin-bottom: 10px;
     }
 
     .mobile-item span {
@@ -1022,6 +1064,7 @@
     .card-text {
         font-size: 13px;
         margin-bottom: 3px;
+        font-weight: 200;
     }
 
     /* services modal mobile */
